--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @layer components{
     .beautify-scrollbar::-webkit-scrollbar{
         width: 5px;
+        height: 5px;
         background-color: rgba(0, 0, 0, 0);
     }
 
@@ -14,7 +15,7 @@
             background-color: transparent;
     }
     .beautify-scrollbar::-webkit-scrollbar-thumb{
-        background-color: rgba(255,255, 255, 0.5);
+        background-color: rgba(126, 143, 151, 0.5);
     }
 
     .card {
